--- a/GPT4-Version/requirements.txt
+++ b/GPT4-Version/requirements.txt
@@ -16,6 +16,7 @@ fsspec==2024.3.1
 gotrue==2.4.2
 gpt4all==2.4.0
 gTTS==2.5.1
+gunicorn==20.1.0  # Ajoutez cette ligne pour installer gunicorn
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -54,8 +55,8 @@ supafunc==0.4.5
 sympy==1.12
 tokenizers==0.15.2
 torch==2.1.0
-torchaudio==2.1.0  # Version compatible avec torch 2.1.0
-torchvision==0.16.0  # Version compatible avec torch 2.1.0
+torchaudio==2.1.0
+torchvision==0.16.0
 tqdm==4.66.2
 transformers==4.39.3
 typing_extensions==4.11.0
@@ -63,4 +64,3 @@ urllib3==2.2.1
 websockets==12.0
 Werkzeug==3.0.2
 zipp==3.18.1
-#test des versions
