--- a/GPT4-Version/requirements.txt
+++ b/GPT4-Version/requirements.txt
@@ -1,66 +1,76 @@
-accelerate==0.29.2
-annotated-types==0.7.0
-anyio==4.3.0
-blinker==1.7.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-decorator==4.4.2
-deprecation==2.1.0
-diffusers==0.27.2
-exceptiongroup==1.2.1
-filelock==3.13.4
-Flask==3.0.3
-fsspec==2024.3.1
-gotrue==2.4.2
-gpt4all==2.4.0
-gTTS==2.5.1
-gunicorn==20.1.0  # Ajoutez cette ligne pour installer gunicorn
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.22.2
-idna==3.6
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-importlib_metadata==7.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-moviepy==1.0.3
-mpmath==1.3.0
-networkx==3.3
-numpy==1.26.4
-packaging==24.0
-pillow==10.3.0
-postgrest==0.16.4
-proglog==0.1.10
-psutil==5.9.8
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydub==0.25.1
-python-dateutil==2.9.0.post0
-PyYAML==6.0.1
-realtime==1.0.4
-regex==2023.12.25
-requests==2.31.0
-safetensors==0.4.2
-six==1.16.0
-sniffio==1.3.1
-storage3==0.7.4
-StrEnum==0.4.15
-supabase==2.4.6
-supafunc==0.4.5
-sympy==1.12
-tokenizers==0.15.2
-#torch==2.1.0+cpu
-#torchaudio==2.1.0+cpu
-#torchvision==0.16.0+cpu
-tqdm==4.66.2
+#accelerate==0.29.2
+#annotated-types==0.7.0
+#anyio==4.3.0
+#blinker==1.7.0
+#certifi==2024.2.2
+#charset-normalizer==3.3.2
+#click==8.1.7
+#colorama==0.4.6
+#decorator==4.4.2
+#deprecation==2.1.0
+#diffusers==0.27.2
+#exceptiongroup==1.2.1
+#filelock==3.13.4
+#Flask==3.0.3
+#fsspec==2024.3.1
+#gotrue==2.4.2
+#gpt4all==2.4.0
+#gTTS==2.5.1
+#gunicorn==20.1.0  # Ajoutez cette ligne pour installer gunicorn
+#h11==0.14.0
+#httpcore==1.0.5
+#httpx==0.27.0
+#huggingface-hub==0.22.2
+#idna==3.6
+#imageio==2.34.0
+#imageio-ffmpeg==0.4.9
+#importlib_metadata==7.1.0
+#itsdangerous==2.1.2
+#Jinja2==3.1.3
+#MarkupSafe==2.1.5
+#moviepy==1.0.3
+#mpmath==1.3.0
+#networkx==3.3
+#numpy==1.26.4
+#packaging==24.0
+#pillow==10.3.0
+#postgrest==0.16.4
+#proglog==0.1.10
+#psutil==5.9.8
+#pydantic==2.7.1
+#pydantic_core==2.18.2
+#pydub==0.25.1
+#python-dateutil==2.9.0.post0
+#PyYAML==6.0.1
+#realtime==1.0.4
+#regex==2023.12.25
+#requests==2.31.0
+#safetensors==0.4.2
+#six==1.16.0
+#sniffio==1.3.1
+#storage3==0.7.4
+#StrEnum==0.4.15
+#supabase==2.4.6
+#supafunc==0.4.5
+#sympy==1.12
+#tokenizers==0.15.2
+#torch==2.1.0
+#torchaudio==2.1.0
+#torchvision==0.16.0
+#tqdm==4.66.2
 #transformers==4.39.3
-typing_extensions==4.11.0
-urllib3==2.2.1
-websockets==12.0
-Werkzeug==3.0.2
-zipp==3.18.1
+#typing_extensions==4.11.0
+#urllib3==2.2.1
+#websockets==12.0
+#Werkzeug==3.0.2
+#zipp==3.18.1
+
+
+Flask==3.0.3
+gunicorn==20.1.0
+diffusers==0.27.2
+moviepy==1.0.3
+gTTS==2.5.1
+supabase==2.4.6
+requests==2.31.0
+Pillow==10.3.0
