--- a/Frontend/template_hover/package.json
+++ b/Frontend/template_hover/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-use-measure": "^2.1.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
